@@ -6,7 +6,16 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.Booking;
+import ru.practicum.shareit.booking.BookingRepository;
+import ru.practicum.shareit.booking.BookingStatus;
+import ru.practicum.shareit.booking.mapper.BookingMapper;
+import ru.practicum.shareit.exception.NotAvailableException;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.item.comment.dto.CommentDto;
+import ru.practicum.shareit.item.comment.mapper.CommentMapper;
+import ru.practicum.shareit.item.comment.model.Comment;
+import ru.practicum.shareit.item.comment.repository.CommentRepository;
 import ru.practicum.shareit.item.request.UpdateItemRequest;
 import ru.practicum.shareit.item.dto.ItemDTO;
 import ru.practicum.shareit.item.mapper.ItemMapper;
@@ -15,7 +24,12 @@ import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.service.UserService;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -26,6 +40,8 @@ import java.util.stream.Collectors;
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository repository;
     private final UserService userService;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
 
     @Override
@@ -37,7 +53,7 @@ public class ItemServiceImpl implements ItemService {
         Item newItem = ItemMapper.mapToItem(item);
         newItem.setOwnerId(user.getId());
         repository.save(newItem);
-        return ItemMapper.toItemDTO(newItem);
+        return ItemMapper.toItemDto(newItem);
       //  return repository.findById(repository.saveItem(newItem));
     }
 
@@ -65,10 +81,44 @@ public class ItemServiceImpl implements ItemService {
         }
         ItemMapper.updateItemFields(updatedItem, request);
 
-        return ItemMapper.toItemDTO(repository.findById(itemId).get());
+        return ItemMapper.toItemDto(repository.findById(itemId).get());
     }
 
-    @Override
+     @Override
+    public ItemDTO findItemById(Long itemId, Long userId) {
+         ItemDTO result;
+         Item item = repository.findById(itemId)
+                 .orElseThrow(() -> new NotFoundException(String.format("Item with ID = %d not found.", itemId)));
+         result = ItemMapper.toItemDto(item);
+         if (Objects.equals(item.getOwnerId(), userId)) {
+             updateBookings(result);
+         }
+        List<Comment> comments = commentRepository.findAllByItemId(result.getId());
+        result.setComments(CommentMapper.toDtoList(comments));
+         return result;
+     }
+         public ItemDTO updateBookings(ItemDTO itemDto) {
+             LocalDateTime now = LocalDateTime.now();
+             List<Booking> bookings = bookingRepository.findBookingsItem(itemDto.getId());
+             Booking lastBooking = bookings.stream()
+                     .filter(obj -> !(obj.getStatus().equals(BookingStatus.REJECTED.REJECTED)))
+                     .filter(obj -> obj.getStart().isBefore(now))
+                     .min((obj1, obj2) -> obj2.getStart().compareTo(obj1.getStart())).orElse(null);
+             Booking nextBooking = bookings.stream()
+                     .filter(obj -> !(obj.getStatus().equals(BookingStatus.REJECTED)))
+                     .filter(obj -> obj.getStart().isAfter(now))
+                     .min(Comparator.comparing(Booking::getStart)).orElse(null);
+             if (lastBooking != null) {
+                 itemDto.setLastBooking(BookingMapper.toItemBookingDto(lastBooking));
+             }
+             if (nextBooking != null) {
+                 itemDto.setNextBooking(BookingMapper.toItemBookingDto(nextBooking));
+             }
+             return itemDto;
+         }
+
+
+         @Override
     public Item getItemById(long itemId) {
         log.debug("getItemById({})", itemId);
        // ItemDTO result;
@@ -90,24 +140,58 @@ return item;
         log.debug("getAllItemsUser({})", userId);
         userService.getUserById(userId);
 
-        return repository.findAllByOwnerId(userId).stream()
-                .map(ItemMapper::toItemDTO)
-                .collect(Collectors.toList());
+        List<ItemDTO> item = repository.findAllByOwnerId(userId).stream()
+                .map(ItemMapper::toItemDto)
+                .toList();
+
+        List<ItemDTO> list = new ArrayList<>();
+        item.stream().map(this::updateBookings).forEach(i -> {
+            CommentMapper.toDtoList(commentRepository.findAllByItemId(i.getId()));
+            list.add(i);
+        });
+        return  list;
     }
 
     @Override
     public Collection<ItemDTO> findItemByNameOrDescription(String text) {
         log.debug("findItemByNameOrDescription({})", text);
+        if (text == null || text.isBlank()) {
+            return Collections.emptyList();
+        }
 
-        return repository.findItemByNameOrDescription(text).stream()
-                .map(ItemMapper::toItemDTO)
-                .collect(Collectors.toList());
+      Collection<ItemDTO> result = repository.searchAvailableItems(text).stream()
+                .map(ItemMapper::toItemDto)
+              .filter(itemDTO -> itemDTO.getAvailable().equals(true))
+              .toList();
+        return result;
+
+
     }
+
     @Override
     public Long findOwnerId(Long itemId) {
         return repository.findById(itemId)
                 .orElseThrow(() -> new NotFoundException(String.format("Item with ID = %d not found.", itemId)))
                 .getOwnerId();
+    }
+
+@Override
+    public CommentDto addComment(Long itemId, Long userId, CommentDto commentDto) {
+        Item item = repository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException(String.format("Item with ID = %d not found.", itemId)));
+        User user = userService.getUserById(userId);
+        List<Booking> bookings = bookingRepository
+                .findByItemIdAndBookerIdAndStatusIsAndEndIsBefore(itemId, userId, BookingStatus.APPROVED, LocalDateTime.now());
+        log.info(bookings.toString());
+        if (!bookings.isEmpty() && bookings.get(0).getStart().isBefore(LocalDateTime.now())) {
+            Comment comment = CommentMapper.toComment(commentDto);
+            comment.setItem(item);
+            comment.setAuthor(user);
+            comment.setCreated(LocalDateTime.now());
+            return CommentMapper.toDto(commentRepository.save(comment));
+        } else {
+            throw new NotAvailableException(String.format("Booking for user with ID = %d and item with ID = %d not found.", userId, itemId));
+        }
     }
 }
 
